UI/UX: fix background position on mobile

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -13,7 +13,8 @@ body
 
 #bg
   position: fixed
-  width: calc(100% + 15px)
+  width: 100%
+  bottom: 0
   z-index: -1
 
 #nav-btn-parent
